cmake_minimum_required(VERSION 3.5)
project(bomber)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    "bomber winform/bin/Debug/resources/player.png"
    "bomber winform/bin/Debug/resources/tileset.png"
    "bomber winform/bin/Debug/resources/tileset.psd"
    "bomber winform/bin/Debug/bomber winform.exe"
    "bomber winform/bin/Debug/bomber winform.exe.config"
    "bomber winform/bin/Debug/bomber winform.pdb"
    "bomber winform/bin/Debug/bomber winform.vshost.exe"
    "bomber winform/bin/Debug/bomber winform.vshost.exe.config"
    "bomber winform/bin/Debug/bomber winform.vshost.exe.manifest"
    "bomber winform/bin/Debug/csfml-audio-2.dll"
    "bomber winform/bin/Debug/csfml-graphics-2.dll"
    "bomber winform/bin/Debug/csfml-network-2.dll"
    "bomber winform/bin/Debug/csfml-system-2.dll"
    "bomber winform/bin/Debug/csfml-window-2.dll"
    "bomber winform/bin/Debug/libsndfile-1.dll"
    "bomber winform/bin/Debug/openal32.dll"
    "bomber winform/bin/Debug/OpenTK.Compatibility.dll"
    "bomber winform/bin/Debug/OpenTK.dll"
    "bomber winform/bin/Debug/sfmlnet-audio-2.dll"
    "bomber winform/bin/Debug/sfmlnet-graphics-2.dll"
    "bomber winform/bin/Debug/sfmlnet-system-2.dll"
    "bomber winform/bin/Debug/sfmlnet-window-2.dll"
    "bomber winform/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll"
    "bomber winform/obj/Debug/bomber winform.csproj.FileListAbsolute.txt"
    "bomber winform/obj/Debug/bomber winform.csproj.GenerateResource.Cache"
    "bomber winform/obj/Debug/bomber winform.csprojResolveAssemblyReference.cache"
    "bomber winform/obj/Debug/bomber winform.exe"
    "bomber winform/obj/Debug/bomber winform.pdb"
    "bomber winform/obj/Debug/bomber_winform.Form1.resources"
    "bomber winform/obj/Debug/bomber_winform.Properties.Resources.resources"
    "bomber winform/obj/Debug/DesignTimeResolveAssemblyReferences.cache"
    "bomber winform/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache"
    "bomber winform/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs"
    "bomber winform/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs"
    "bomber winform/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs"
    "bomber winform/Properties/AssemblyInfo.cs"
    "bomber winform/Properties/Resources.Designer.cs"
    "bomber winform/Properties/Resources.resx"
    "bomber winform/Properties/Settings.Designer.cs"
    "bomber winform/Properties/Settings.settings"
    "bomber winform/App.config"
    "bomber winform/bomber winform.csproj"
    "bomber winform/bomber.cs"
    "bomber winform/csfml-audio-2.dll"
    "bomber winform/csfml-graphics-2.dll"
    "bomber winform/csfml-network-2.dll"
    "bomber winform/csfml-system-2.dll"
    "bomber winform/csfml-window-2.dll"
    "bomber winform/Form1.cs"
    "bomber winform/Form1.Designer.cs"
    "bomber winform/Form1.resx"
    "bomber winform/libsndfile-1.dll"
    "bomber winform/map.cs"
    "bomber winform/openal32.dll"
    "bomber winform/OpenTK.Compatibility.dll"
    "bomber winform/OpenTK.dll"
    "bomber winform/player.png"
    "bomber winform/Program.cs"
    "bomber winform/textureLoader.cs"
    "bomber winform.sln")

add_executable(bomber ${SOURCE_FILES})